# DZ_22_cross

./: README.md
Console_Chat/Console_Chat/: CMakeLists.txt  Chat.cpp  Chat.h  Console_Chat.cpp  Message.cpp  Message.h  User.cpp  User.h  UserList.txt
Console_Chat/build-Console_Chat-Desktop-Debug/: CMakeCache.txt.prev  Chat  Makefile  Message_list_general.txt  Message_list_priv.txt  UserList.txt  cmake_install.cmake
Console_Chat/build-Console_Chat-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-fe140c17da464f35fa68.json  cmakeFiles-v1-16b7af464eda595e3b9a.json  codemodel-v2-253e008471851c76335f.json  index-2024-02-01T07-48-52-0351.json  target-Chat-Debug-ca12457b0319a6b34b61.json
